[package]
name = "altria"
version = "0.1.1"
description = "A comprehensive Rust library for web server development"
documentation = "https://docs.rs/altria"
readme = "README.md"
categories = ["web-programming"]
keywords = ["web", "http"]
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[[example]]
name = "error_usage"
path = "examples/error_usage.rs"

[dependencies]
