[package]
name = "altria"
version = "0.0.1"
description = "A comprehensive Rust library for web server development"
documentation = "https://docs.rs/altria"
readme = "README.md"
categories = ["web-programming"]
keywords = ["web", "http"]
authors = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
